@@ -4,6 +4,8 @@
 
 #if HAVE_CURSES_H
 #include <curses.h>
+#elif HAVE_NCURSES_CURSES_H
+#include <ncurses/curses.h>
 #endif
 
 #if HAVE_STDIO_H
