@@ -18,27 +18,12 @@ AC_CANONICAL_HOST
 
 case $host in
  *-*-linux*)
-   SYSTEM=LINUX
    AC_DEFINE(HAVE_LINUX, 1,  Linux environment)
    ;;
  *-*-cygwin*)
-   SYSTEM=CYGWIN
    AC_DEFINE(HAVE_CYGWIN, 1,  Cygwin environment)
    ;;
- *-*-solaris*)
-   SYSTEM=SOLARIS
-   AC_DEFINE(HAVE_SOLARIS, 1,  Solaris environment)
-   ;;
- *-*-freebsd*)
-   SYSTEM=FREEBSD
-   AC_DEFINE(HAVE_FREEBSD, 1,  Freebsd environment)
-   ;;
- *-*-hp*)
-   SYSTEM=HP
-   AC_DEFINE(HAVE_HP, 1,  Hp environment)
-   ;;
  *)
-   SYSTEM=UNKNOWN
    ;;
 esac
 
@@ -73,7 +58,9 @@ AC_CHECK_HEADERS([ctype.h],,[AC_MSG_ERROR([CGDB requires ctype.h to build.])])
 AC_CHECK_HEADERS([limits.h],,[AC_MSG_ERROR([CGDB requires limits.h to build.])])
 AC_CHECK_HEADERS([math.h],,[AC_MSG_ERROR([CGDB requires math.h to build.])])
 AC_CHECK_HEADERS([regex.h],,[AC_MSG_ERROR([CGDB requires regex.h to build.])])
-AC_CHECK_HEADERS([curses.h],,[AC_MSG_ERROR([CGDB requires curses.h to build.])])
+AC_CHECK_HEADERS([curses.h],,[
+   AC_CHECK_HEADERS([ncurses/curses.h],,[
+      AC_MSG_ERROR([CGDB requires curses.h or ncurses/curses.h to build.])])])
 
 dnl Check for getopt.h, If this is here then getopt_long can be used.
 AC_CHECK_HEADERS([getopt.h],
