@@ -1,3 +1,7 @@
+  * CGDB should now build out of the box on Cygwin again.
+    CGDB used to only support building against curses.h. Now
+    it also supports building against ncurses/curses.h.
+
   * No longer set the prompt to (gdb) on startup.
 
 cgdb-0.6.5 (01/01/2010)
